@@ -305,7 +305,7 @@ class DataExplore(Frame):
             g = '%dx%d+%d+%d' % (ws,hs,0,0)
             self.w = ws
         else:
-            self.w = w = ws/1.4; h = hs*0.7
+            self.w = w = ws/1.3; h = hs*0.7
             x = (ws/2)-(w/2); y = (hs/2)-(h/2)
             g = '%dx%d+%d+%d' % (w,h,x,y)
         return g
@@ -386,7 +386,7 @@ class DataExplore(Frame):
         for m in opts:
             if m in meta and meta[m] is not None:
                 #util.setAttributes(opts[m], meta[m])
-                opts[m].updateFromOptions(meta[m])
+                opts[m].updateFromDict(meta[m])
                 #check options loaded for missing values
                 #avoids breaking file saves when options changed
                 defaults = plotting.get_defaults(m)
@@ -750,7 +750,7 @@ class DataExplore(Frame):
         table = Table(f1, dataframe=df, showtoolbar=1, showstatusbar=1)
         f2 = Frame(main)
         #show the plot frame
-        pf = table.showPlotViewer(f2, layout='horizontal')
+        pf = table.showPlotViewer(f2)
         #load meta data
         if meta != None:
             self.loadMeta(table, meta)
