@@ -418,7 +418,7 @@ def plot_clear():
             +'FiQQGBAAOw==')
     return img
 
-def plotprefs():
+def plot_prefs():
     img = tk.PhotoImage(format='gif',data=
              'R0lGODlhEAAQAIcAAAAAAFU9ETxyvz10wj51wz52xD92xT93xltujUJ3xkB4'
             +'x0F5yUF6ykJ6y0J7zEN8zEN8zUR9zkV+0EV/0XCfvYdfKJxpHYNlK6pkHL56'
@@ -1019,20 +1019,36 @@ def color_swatch():
 
 def zoom_in():
      img = tk.PhotoImage(format='gif',data=
-             'R0lGODlhEAAQAPQYADdrGTlsG0x7MVOMKFePLVmEQF2HRGaOT2iPUW6UWIGr'
-            +'YYe5YIe6YIu6Yo26ZIy8ZY+8Z4+7arHTkLHWkrLSlbTUlbbUnNDmuv///wAA'
-            +'AAAAAAAAAAAAAAAAAAAAAAAAACH5BAEAABkAIf8LSW1hZ2VNYWdpY2sKZ2Ft'
-            +'bWE9MC40NQAsAAAAABAAEAAABTVgJo5kaZ5oqq4smhzFiijVFRFAakgT9kA5'
-            +'lMCCKVKCp0CDgVkAU4CBg+IYIE+AbLbF7XpZIQA7')
+             'R0lGODlhEAAQAPYAACprJi5vKTBxKzJ0LDN2LjV5MIdIKKVcM6tkN6tnN6tk'
+            +'PT6DN0SLPU2WRVOeS1qbU1yoUl6rVF+tVmWnXmGwV2OyWWe2XGusY3a3bbmA'
+            +'SLyFSryES7yDT7yGTL2GTL2JTL6JTb6KTb6KT7yEUcGOT8GPT8KPUMGOWMOR'
+            +'UMORU8ORVsSVVcaWVceXV8aZVseaV8icV8mfW82kW8yhXc2lXs2mXs6mXs6n'
+            +'XsmbYc2lYc6mYM6nYc6mYs+nYs+oYc+oZNe1fda1f4LCfYbFfdq7gIvGg4vH'
+            +'hZDKiJrPkp7RlZ/Sl6bVnd7Ejd/Fj+DHk+PMmefToOjVo+nXpQAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAEAAFMA'
+            +'If8LSW1hZ2VNYWdpY2sKZ2FtbWE9MC40NQAsAAAAABAAEAAAB36AU4KDhIWE'
+            +'Nzo/PzMxhoM+N4QuLY4+MoYoKIU3kY4kIoQ6joOgg6KFFhQQU6WCp4QSSw5T'
+            +'HoSNgxURGEkXDAuSlIIQSUhDR0UFhS0kgg4NE0YPAwGYrQtCA09NHIYbHh4b'
+            +'BQIAUVJECqODJ01QTjgG6YIjQUEqCfGCBxn3U4EAOw==')
      return img
 
 def zoom_out():
      img = tk.PhotoImage(format='gif',data=
-             'R0lGODlhEAAQAPQbALlEA7lFA7xCBL1NBMBNDsNXGt1kAeFoA+52AOp5Bfh2'
-            +'AO9/GP93Ef9/GMlkJctrLdFzOOZ3If+GIeuKQP+STfSdY/Wocva1jfe1jf7N'
-            +'rv7WuP///wAAAAAAAAAAAAAAACH5BAEAABwAIf8LSW1hZ2VNYWdpY2sKZ2Ft'
-            +'bWE9MC40NQAsAAAAABAAEAAABTMgJ45kaZ5oqq4sSggBC2Ga9ajARTHSBKSC'
-            +'zGa4EKQClYYCcYihCo5IwjBgBWCtrHbbCgEAOw==')
+             'R0lGODlhEAAQAPYAAOoRHOwaI+4mLvE1OodIKKVcM6tkN6tnN6tkPbd+R/RF'
+            +'SPdUVvpjYvxvbf54dLmASLyFSryES7uBTLyDT7yGTL2GTL2JTL6JTb6KTb6K'
+            +'T7yEUcGOT8GPT8KPUMGMUsGOWMORUMORU8ORVsSVVcaWVceXV8aZVseaV8ic'
+            +'V8mfW82kW8yhXc2lXs2mXs6mXs6nXsmbYc2lYc6mYM6nYc6mYs+nYs+oYc+o'
+            +'ZNa0ede1fda1f9q7gNu/h/Ogm/SrpPa2rt7Ejd/Fj+DHk+PMmefToOjVo+nX'
+            +'pffAt/jIvwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA'
+            +'AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACH5BAEAAEkA'
+            +'If8LSW1hZ2VNYWdpY2sKZ2FtbWE9MC40NQAsAAAAABAAEAAAB3WASYKDhIWE'
+            +'LzI3NysphoM2L4QmJY42KoYgIIUvkY4bGYQyjoOgg6KjSaWCp6MVhI2DDg0M'
+            +'CwoDApKUgg1IRz8+PQGFJRyCtLYCAQCGn4QeOENAE4YQFRURCRM8RUY7CKiC'
+            +'H0FEQjAE4EkaOTkfB+hJBQ/uSYEAOw==')
      return img
 
 def save():
